--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="Little lemon restaurant website" />
+    <link rel="shortcut icon" href="./Logo .svg" type="image/x-icon" />
+
+    <!-- OGP -->
+
+    <meta name="og:title" content="Little lemon restaurant Chicago" />
+    <meta name="og:description" content="Little lemon restaurant Chicago" />
+    <meta name="og:image" content="./Logo .svg" />
+    
+
+    <title>Little Lemon Chicago</title>
   </head>
   <body>
     <div id="root"></div>
